@@ -1,17 +1,107 @@
-/*
-    Copyright 2008, Felspar Co Ltd. http://fost.3.felspar.com/
+/**
+    Copyright 2008-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
 #include "fost-core.hpp"
 #include <fost/dynlib.hpp>
+#include <fost/insert.hpp>
+#include <fost/push_back.hpp>
 
 
 #ifdef WIN32
-    #include "dynlib-win.cpp"
+
+
+using namespace fostlib;
+
+
+struct fostlib::dynlib::impl {
+};
+
+
+fostlib::dynlib::dynlib( const string &pathname )
+: m_lib( NULL ) {
+    string munged = pathname;
+#ifdef _DEBUG
+    munged += "-gd";
+#endif
+    if ( ::LoadLibrary( munged.c_str() ) == NULL )
+        if ( ::LoadLibrary( pathname.c_str() ) == NULL )
+            throw exceptions::null(L"LoadLibrary failed for " + pathname, format_last_error());
+}
+
+
+fostlib::dynlib::~dynlib() {
+}
+
+
 #else
-    #include "dynlib-linux.cpp"
+
+
+#include <dlfcn.h>
+#include <fost/atexit.hpp>
+
+
+using namespace fostlib;
+
+
+struct fostlib::dynlib::impl {
+    impl( void *h )
+    : handle( h ) {
+    }
+    ~impl() {
+        if ( handle )
+            dlclose( handle );
+    }
+    string name;
+    void *handle;
+};
+
+
+fostlib::dynlib::dynlib(const string &lib)
+: m_lib(nullptr) {
+    fostlib::json attempts;
+    const auto tryload = [&attempts](string dl) {
+        void *h = dlopen(dl.c_str(), RTLD_NOW);
+        fostlib::push_back(attempts, std::move(dl));
+        return h;
+    };
+    void *handle = tryload(lib);
+#if defined(__APPLE__)
+    f5::lstring ext = ".dylib";
+#else
+    f5::lstring ext = ".so";
+#endif
+    auto next = [tryload, &handle](string dl) {
+        if ( handle == nullptr ) handle = tryload(std::move(dl));
+    };
+    next("lib" + lib + ext);
+    next("lib" + lib + "-d" + ext);
+    next(lib + ext);
+    next("lib" + lib);
+    if ( handle == nullptr ) {
+        fostlib::exceptions::null err("dlopen failed");
+        fostlib::insert(err.data(), "attempted", attempts);
+        throw err;
+    }
+    m_lib = new fostlib::dynlib::impl(handle);
+    m_lib->name = lib;
+}
+
+
+fostlib::dynlib::~dynlib() {
+    /**
+        We don't want to actually unload the .so yet as there may well still be objects
+        that it manages.
+
+        The choice of adding the deletion to `atexit` here is somewhat arbitrary. It could
+        have just as easily gone in the constructor
+    */
+    if ( m_lib ) fostlib::atexit([libp = m_lib]() { delete libp; });
+}
+
+
 #endif
